<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2023 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/permissions_nav_graph">


    <fragment
        android:id="@+id/unitFragment"
        android:name="com.android.healthconnect.controller.units.UnitsFragment"
        android:label="@string/units_title" />

    <fragment
        android:id="@+id/dataEntryDetailsFragment"
        android:name="com.android.healthconnect.controller.data.entrydetails.DataEntryDetailsFragment"
        android:label="@string/entry_details_title" >
        <action
            android:id="@+id/action_dataEntryDetailsFragment_to_unitFragment"
            app:destination="@id/unitFragment" />
    </fragment>

    <fragment
        android:id="@+id/fitnessAppFragment"
        android:label="@string/app_access_title"
        android:name="com.android.healthconnect.controller.permissions.app.FitnessAppFragment">
        <argument
            android:name="android.intent.extra.PACKAGE_NAME"
            app:argType="string" />
    </fragment>

</navigation>